# backend_action

./: README.md  Untitled Diagram.drawio
chapter10/daemon/: CMakeLists.txt  README.md  daemon.cc
chapter10/process_status/: CMakeLists.txt  README.md  status.cc  status_waitpid.cc
chapter11/ipcs/: README.md
chapter11/message_queue/: CMakeLists.txt  README.md  makefile  receiver.cc  sender.cc
chapter11/semaphore/: CMakeLists.txt  makefile  reader.cc  writer.cc
chapter11/share_memory/: CMakeLists.txt  README.md  consumer.cc  makefile  producer.cc  shared_data.h
chapter11/simple_pipe/: CMakeLists.txt  README.md  makefile  pipe.cc  pipe_reader.cc  pipe_writer.cc
chapter13/json/: CMakeLists.txt  README.md  json_test.cc
chapter13/protobuf/: CMakeLists.txt  README.md  message.pb.cc  message.pb.h  message.proto  reader.cc  writer.cc
chapter6/endian/: CMakeLists.txt  README.md  endian.cc  makefile
chapter6/hello_world/: CMakeLists.txt  README.md  client  client.cc  makefile  server  server.cc
chapter6/option/: CMakeLists.txt  README.md  client.cc  makefile  server.cc
chapter6/struct/: CMakeLists.txt  README.md  client.cc  makefile  server.cc  util.cc  util.h
chapter7/epoll/: CMakeLists.txt  README.md  client.cc  makefile  server.cc
chapter7/poll/: CMakeLists.txt  README.md  client.cc  makefile  server.cc
chapter8/: README.md
debug/valgrind/: CMakeLists.txt  README.md  cover.cc  free_twice.cc  illegal_memory.cc  mem_leaks.cc  out_of_bound.cc  uninitialized.cc
stl/: CMakeLists.txt  README.md  str.cpp  str.h  str_test.cpp  vector.h  vector_test.cpp
(+61 files in other folders)
